fix: filter spacing items

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -253,6 +253,9 @@ button {
     &-item {
       @include centralize($direction: column);
       gap: 8px;
+      margin-inline: 3px;
+      flex-basis: 30%;
+      box-sizing: border-box;
 
       input {
         display: none;
@@ -280,7 +283,7 @@ button {
       height: 99px;
       border-radius: 50%;
       background-color: $light-gray-color;
-      @media only screen and (max-width: 360px) {
+      @media only screen and (max-width: 430px) {
         width: 80px;
         height: 80px;
         svg {
@@ -308,10 +311,6 @@ button {
 
       @include centralize();
       justify-content: space-between;
-
-      @media only screen and (min-width: 430px) {
-        gap: 20px;
-      }
     }
   }
 
